roles/system/traefik/templates/traefik-dashboard.yml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  labels:
    app: traefik-dashboard
  name: proxy-admin-dashboard
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxy.mccannclan.family`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    store:
      name: default
