roles/system/traefik/templates/traefik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{any:.+}`)
      kind: Rule
      services:
        - name: traefik
          port: 80
      middlewares:
        - name: kube-system-redirect-https@kubernetescrd
        - name: kube-system-security@kubernetescrd
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: alertmanager-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertman.mccannclan.family`)
      services:
        - name: alertmanager-main
          namespace: monitoring
          port: 9093
  tls:
    store:
      name: default
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: grafana-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.mccannclan.family`)
      services:
        - name: grafana
          namespace: monitoring
          port: 3000
  tls:
    store:
      name: default
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`data.mccannclan.family`)
      services:
        - name: prometheus-k8s
          namespace: monitoring
          port: 9090
  tls:
    store:
      name: default
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  labels:
    app: traefik-dashboard
  name: proxy-admin-dashboard
  namespace: default
  resourceVersion: '708144'
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxy.mccannclan.family`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    store:
      name: default
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
